add: support for java v25